замена на HashMap